--- a/INSTALL
+++ b/INSTALL
@@ -45,3 +45,11 @@ Make sure your version is the latest from the release, and the one you
 just installed :-)
 
 For more information on GlusterFS installation refer# http://docs.gluster.org/en/latest/Developer-guide/Building-GlusterFS/
+
+
+INSTALL:
+1. autoupdate
+2. ./autogen.sh
+3. CPPFLAGS=-I/usr/local/Cellar/openssl\@1.1/1.1.1m/include/ LDFLAGS="-L/usr/local/lib -largp -L/usr/local/Cellar/openssl@1.1/1.1.1m/lib/" ./configure --without-server --disable-fuse-client --without-libtirpc
+4. make
+5. make install
